# ViTHash

./: README.md  pyproject.toml
ViTHash/: __init__.py  hashing.py
